--- a/src/UI/Histories.xaml
+++ b/src/UI/Histories.xaml
@@ -11,7 +11,7 @@
              xmlns:converters="clr-namespace:SourceGit.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid x:Name="layout" Background="{StaticResource Brush.CommitViewer}">
+    <Grid x:Name="layout">
         <!-- List Panel (SearchBar + DataGrid) -->
         <Border x:Name="commitListPanel" Background="{StaticResource Brush.Contents}" BorderBrush="{StaticResource Brush.Border0}" SnapsToDevicePixels="True">
             <Grid>
@@ -185,7 +185,7 @@
             <local:TwoCommitsDiff x:Name="twoCommitDiff" Visibility="Collapsed"/>
 
             <!-- Mask -->
-            <Border x:Name="mask" Background="{StaticResource Brush.CommitViewer}">
+            <Border x:Name="mask" Background="{StaticResource Brush.Window}">
                 <StackPanel Orientation="Vertical" VerticalAlignment="Center" Opacity=".25">
                     <Path Width="128" Height="128" Data="{StaticResource Icon.Detail}"/>
                     <Label x:Name="txtCounter" Visibility="Hidden" FontFamily="Consolas" Margin="0,16,0,0" FontSize="24" FontWeight="UltraBold" HorizontalAlignment="Center"/>
