style<Icon>: remove duplicated icons

--- a/src/Resources/Styles/ToggleButton.xaml
+++ b/src/Resources/Styles/ToggleButton.xaml
@@ -41,7 +41,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <Style x:Key="Style.ToggleButton.Filter" TargetType="{x:Type ToggleButton}">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
@@ -72,32 +72,6 @@
                             </MultiTrigger.Conditions>
                             <Setter TargetName="Icon" Property="Fill" Value="{DynamicResource Brush.FG2}"/>
                         </MultiTrigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style x:Key="Style.ToggleButton.Orientation" TargetType="{x:Type ToggleButton}">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="BorderBrush" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="0"/>
-
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ToggleButton}">
-                    <Grid Background="Transparent">
-                        <Path 
-                            x:Name="Icon"
-                            Style="{DynamicResource Style.Icon}"
-                            Fill="{DynamicResource Brush.FG2}"
-                            Data="{DynamicResource Icon.Vertical}"/>
-                    </Grid>
-
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsChecked" Value="True">
-                            <Setter TargetName="Icon" Property="Data" Value="{DynamicResource Icon.Horizontal}"/>
-                        </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
@@ -145,12 +119,10 @@
                     <Grid Background="Transparent">
                         <Path 
                             x:Name="Icon" 
-                            Height="12"
-                            Width="12"
+                            Height="{TemplateBinding Width}"
+                            Width="{TemplateBinding Height}"
                             Style="{DynamicResource Style.Icon}"
-                            Fill="Transparent"
-                            Stroke="{DynamicResource Brush.FG1}"
-                            StrokeThickness=".4"
+                            Fill="{TemplateBinding Foreground}"
                             Data="{DynamicResource Icon.SplitVertical}"/>
                     </Grid>
 
