style<DataGrid, ListView>: remove default FocusVisualStyle

--- a/src/Resources/Styles/DataGrid.xaml
+++ b/src/Resources/Styles/DataGrid.xaml
@@ -3,6 +3,8 @@
 
     <Style x:Key="Style.DataGridCell" TargetType="{x:Type DataGridCell}">
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+        
         <Style.Triggers>
             <Trigger  Property="IsSelected" Value="true">
                 <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
@@ -23,7 +25,7 @@
 
     <Style x:Key="Style.DataGridRow" TargetType="{x:Type DataGridRow}">
         <Setter Property="BorderThickness" Value="0"/>
-        
+
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="{DynamicResource Brush.Accent2}"/>
