--- a/src/UI/Stashes.xaml
+++ b/src/UI/Stashes.xaml
@@ -118,7 +118,7 @@
                             </Grid.ColumnDefinitions>
 
                             <Border Grid.Column="0" Width="14" Height="14" Background="{Binding ., Converter={StaticResource StatusColorConverter}}" CornerRadius="2" Margin="0,0,4,0">
-                                <TextBlock Text="{Binding ., Converter={StaticResource StatusIconConverter}}" Foreground="{StaticResource Brush.FG1}" TextAlignment="Center" VerticalAlignment="Center" FontSize="10"/>
+                                <TextBlock Text="{Binding ., Converter={StaticResource StatusIconConverter}}" Foreground="White" TextAlignment="Center" VerticalAlignment="Center" FontSize="8"/>
                             </Border>
 
                             <TextBlock Grid.Column="1" Text="{Binding Path}" Foreground="{StaticResource Brush.FG1}" VerticalAlignment="Center" FontSize="11"/>
