--- a/src/Resources/Styles/ContextMenu.xaml
+++ b/src/Resources/Styles/ContextMenu.xaml
@@ -104,4 +104,6 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <PopupAnimation x:Key="{x:Static SystemParameters.MenuPopupAnimationKey}">None</PopupAnimation>
 </ResourceDictionary>
